# HawaiMama

./: .gitignore  README.md  docker-compose.yml
admin/: .dockerignore  Dockerfile  package-lock.json  package.json
core/: .dockerignore  .env.example  .gitignore  Dockerfile  Nepali_OCR.ipynb  README.md  pyproject.toml  server.py  test_plate.py
core/config/: approach_rois.json  approach_rois_input6.json
core/data/: mock_vehicle_registry.json
core/src/traffic_monitoring/: __init__.py  __main__.py  annotations.py  auth.py  cli.py  config.py  detectors.py  domain.py  mock_dotm_service.py  persistence.py  pipeline.py  secondary.py  storage.py  tracking.py  video.py  violations.py
core/src/traffic_monitoring/events/: __init__.py  logic.py  store.py
core/src/traffic_monitoring/pipeline/: __init__.py  runtime.py
core/src/traffic_monitoring/server/: app.py  repository.py
core/src/traffic_monitoring/traffic/: __init__.py  lanes.py  signal.py
core/surveillance/: README.md
core/wwwroots/violations/1970/01/01/accident-accident/accident/track-1/: 000001_000000_snapshot_1.json  000001_000000_snapshot_2.json  000001_000000_snapshot_3.json
core/wwwroots/violations/1970/01/01/input7-input7/no_helmet/track-151/: 000006_833000_snapshot_1.json  000006_833000_snapshot_2.json  000006_833000_snapshot_3.json
core/wwwroots/violations/1970/01/01/input7-input7/no_helmet/track-187/: 000011_500000_snapshot_1.json  000011_500000_snapshot_2.json  000011_500000_snapshot_3.json
core/wwwroots/violations/1970/01/01/input7-input7/no_helmet/track-22/: 000007_000000_snapshot_1.json  000007_000000_snapshot_2.json  000007_000000_snapshot_3.json
(+37 files in other folders)
